hphp/test/zend7/Zend/tests/exception_013.php.expectf
Exception: Access to undeclared static property: C::$a in %sexception_013.php on line 7

Exception: Cannot access private property C::$p in %sexception_013.php on line 13

Exception: Attempt to unset static property C::$a in %sexception_013.php on line 19

Fatal error: %s
Stack trace:%A